# EAG-V1-2025

./: .env  .gitignore  README.md  practice_notebook.ipynb  pyproject.toml  reference_environment_setup_notes.txt
.ipynb_checkpoints/: practice_notebook-checkpoint.ipynb
0. Other Python Learnings/: applying_try_with_asyncio.py  asyncio-2.py  code_interact.py  decorator_basic_working.py  function_caller.py  non-asyncio-basic.py  pdb_trial.py  try_block_basic_working.py
1. simple-agentic-code/: Session3.ipynb  main.py
1. simple-agentic-code - Session-3/: mcp_client.py
2. mcp_basic_agentic_code - Session-4/agentic_use_sample_paint/: mcp_client.py  mcp_server.py
Session 0 - All basic python scripts/: asyncio-basic.py  basic_gemini_embeddings.py  basic_llm_call_code.py  basic_ollama_embeddings.py  basic_ollama_llm_call.py
Session 3 - simple-agentic-code/: mcp_server.py
Session 7 - FAISS-and-Advanced-RAG/: faiss_ollama_advanced.py  faiss_ollama_medium.py  faiss_ollama_simple.py  gemini_embed_compare.py  ollama_embed_compare.py  pyproject.toml
Session 7 - FAISS-and-Advanced-RAG/Advanced-RAG-E2E/: action.py  agent.py  decision.py  mcp_client_practice.py  memory.py  models.py  perception.py  practice_dummy.py  practice_notebook.ipynb  tools_mcp_server.py
Session 7 - FAISS-and-Advanced-RAG/Advanced-RAG-E2E/documents/: mac_memory.md
Session 7 - FAISS-and-Advanced-RAG/Advanced-RAG-E2E/faiss_index/: doc_index_cache.json  metadata.json
Session 7 - FAISS-and-Advanced-RAG/documents/: cricket.txt
class_files/Session 4/: example_mcp_server.py
(+7 files in other folders)
